* Version 4.1.x  --  Stable Branch

  - [Enblend and Enfuse] The Boost implementation of the `Mersenne
    Twister' random number generator caused segmentation faults when
    used in the OpenMP-enabled versions of Enblend and Enfuse.  The
    new implementation is based on the GNU Scientific Library (GSL),
    which plays nicely with concurrent accesses.

  - [Enblend only] Correct a mistake that causes overlapping images
    with multiple seams to be blended incorrectly.

  - [Enblend only] Require the OpenGL extension
    `GL_ARB_texture_rectangle' for the `--gpu' option to work.  This
    does away with a pesky warning of OpenGL drivers that do support
    this extension and avoids crashes with drivers that don't.

    The GPU performance improvement of Enblend via `--gpu' now is only
    available with drivers that feature `GL_ARB_texture_rectangle'
    (among many other required OpenGL extensions).

    The OpenGL warning about odd texture sizes is unaffected by this
    change.


* Version 4.1  "Trouble In Paradise"

Released on December 8, 2012.

** Improvements

- All deprecated options since version 4.0 have been removed.

- A new primary seam-line generator, based on a Graph-Cut algorithm,
  has been implemented during GSoC 2011 by Mikołaj Leszczyński.  The
  old Nearest-Feature Transform remains the default.  The new
  algorithm is activated with "--primary-seam-generator=graph-cut".

- The difference image on which Enblend's seam-line optimization
  relies for color images uses a perceptual model by default (option
  "--image-difference"), yielding a true CIE76 "Delta E" with the
  (default) luminance and chrominance weights of 1.

- Parallelize CIECAM02 color conversion (option "--ciecam").  Speedups
  of up to 40% have been reported on the amd64 architecture.  The
  computationally expensive color-space conversion still slows down
  blending and fusing by some 25%.

- Enblend and Enfuse integrate seamlessly in color-managed workflow.