@@ -53,24 +53,24 @@ inline void
 combineTwoImagesMP(SrcImageIterator1 src1_upperleft, SrcImageIterator1 src1_lowerright, SrcAccessor1 src1_acc,
                    SrcImageIterator2 src2_upperleft, SrcAccessor2 src2_acc,
                    DestImageIterator dest_upperleft, DestAccessor dest_acc,
-                   const Functor& func)
+                   const Functor& functor)
 {
-    typedef typename DestAccessor::value_type value_type;
-    typedef typename vigra::NumericTraits<value_type>::isScalar isScalar;
-
-    const vigra::Diff2D size(src1_lowerright - src1_upperleft);
-
 #pragma omp parallel
     {
-        const int n = omp_get_num_threads();
-        const int i = omp_get_thread_num();
-        const vigra::Diff2D begin(0, (i * size.y) / n);
-        const vigra::Diff2D end(size.x, ((i + 1) * size.y) / n);
+        const vigra::Size2D size(src1_lowerright - src1_upperleft);
+        Functor f(functor);
 
-        vigra::combineTwoImages(src1_upperleft + begin, src1_upperleft + end, src1_acc,
-                                src2_upperleft + begin, src2_acc,
-                                dest_upperleft + begin, dest_acc,
-                                func);
+#pragma omp for schedule(guided) nowait
+        for (int y = 0; y < size.y; ++y)
+        {
+            const vigra::Diff2D begin(0, y);
+            const vigra::Diff2D end(size.x, y + 1);
+
+            vigra::combineTwoImages(src1_upperleft + begin, src1_upperleft + end, src1_acc,
+                                    src2_upperleft + begin, src2_acc,
+                                    dest_upperleft + begin, dest_acc,
+                                    f);
+        }
     } // omp parallel
 }
 
@@ -85,25 +85,25 @@ combineTwoImagesIfMP(SrcImageIterator1 src1_upperleft, SrcImageIterator1 src1_lo
                      SrcImageIterator2 src2_upperleft, SrcAccessor2 src2_acc,
                      MaskImageIterator mask_upperleft, MaskAccessor mask_acc,
                      DestImageIterator dest_upperleft, DestAccessor dest_acc,
-                     const Functor& func)
+                     const Functor& functor)
 {
-    typedef typename DestAccessor::value_type value_type;
-    typedef typename vigra::NumericTraits<value_type>::isScalar isScalar;
-
-    const vigra::Diff2D size(src1_lowerright - src1_upperleft);
-
 #pragma omp parallel
     {
-        const int n = omp_get_num_threads();
-        const int i = omp_get_thread_num();
-        const vigra::Diff2D begin(0, (i * size.y) / n);
-        const vigra::Diff2D end(size.x, ((i + 1) * size.y) / n);
+        const vigra::Size2D size(src1_lowerright - src1_upperleft);
+        Functor f(functor);
 
-        vigra::combineTwoImagesIf(src1_upperleft + begin, src1_upperleft + end, src1_acc,
-                                  src2_upperleft + begin, src2_acc,
-                                  mask_upperleft + begin, mask_acc,
-                                  dest_upperleft + begin, dest_acc,
-                                  func);
+#pragma omp for schedule(guided) nowait
+        for (int y = 0; y < size.y; ++y)
+        {
+            const vigra::Diff2D begin(0, y);
+            const vigra::Diff2D end(size.x, y + 1);
+
+            vigra::combineTwoImagesIf(src1_upperleft + begin, src1_upperleft + end, src1_acc,
+                                      src2_upperleft + begin, src2_acc,
+                                      mask_upperleft + begin, mask_acc,
+                                      dest_upperleft + begin, dest_acc,
+                                      f);
+        }
     } // omp parallel
 }
 
@@ -118,25 +118,25 @@ combineThreeImagesMP(SrcImageIterator1 src1_upperleft, SrcImageIterator1 src1_lo
                      SrcImageIterator2 src2_upperleft, SrcAccessor2 src2_acc,
                      SrcImageIterator3 src3_upperleft, SrcAccessor3 src3_acc,
                      DestImageIterator dest_upperleft, DestAccessor dest_acc,
-                     const Functor& func)
+                     const Functor& functor)
 {
-    typedef typename DestAccessor::value_type value_type;
-    typedef typename vigra::NumericTraits<value_type>::isScalar isScalar;
-
-    const vigra::Diff2D size(src1_lowerright - src1_upperleft);
-
 #pragma omp parallel
     {
-        const int n = omp_get_num_threads();
-        const int i = omp_get_thread_num();
-        const vigra::Diff2D begin(0, (i * size.y) / n);
-        const vigra::Diff2D end(size.x, ((i + 1) * size.y) / n);
+        const vigra::Size2D size(src1_lowerright - src1_upperleft);
+        Functor f(functor);
 
-        vigra::combineThreeImages(src1_upperleft + begin, src1_upperleft + end, src1_acc,
-                                  src2_upperleft + begin, src2_acc,
-                                  src3_upperleft + begin, src3_acc,
-                                  dest_upperleft + begin, dest_acc,
-                                  func);
+#pragma omp for schedule(guided) nowait
+        for (int y = 0; y < size.y; ++y)
+        {
+            const vigra::Diff2D begin(0, y);
+            const vigra::Diff2D end(size.x, y + 1);
+
+            vigra::combineThreeImages(src1_upperleft + begin, src1_upperleft + end, src1_acc,
+                                      src2_upperleft + begin, src2_acc,
+                                      src3_upperleft + begin, src3_acc,
+                                      dest_upperleft + begin, dest_acc,
+                                      f);
+        }
     } // omp parallel
 }
 
@@ -147,23 +147,23 @@ template <class SrcImageIterator, class SrcAccessor,
 inline void
 transformImageMP(SrcImageIterator src_upperleft, SrcImageIterator src_lowerright, SrcAccessor src_acc,
                  DestImageIterator dest_upperleft, DestAccessor dest_acc,
-                 const Functor& func)
+                 const Functor& functor)
 {
-    typedef typename DestAccessor::value_type value_type;
-    typedef typename vigra::NumericTraits<value_type>::isScalar isScalar;
-
-    const vigra::Diff2D size(src_lowerright - src_upperleft);
-
 #pragma omp parallel
     {
-        const int n = omp_get_num_threads();
-        const int i = omp_get_thread_num();
-        const vigra::Diff2D begin(0, (i * size.y) / n);
-        const vigra::Diff2D end(size.x, ((i + 1) * size.y) / n);
+        const vigra::Size2D size(src_lowerright - src_upperleft);
+        Functor f(functor);
 
-        vigra::transformImage(src_upperleft + begin, src_upperleft + end, src_acc,
-                              dest_upperleft + begin, dest_acc,
-                              func);
+#pragma omp for schedule(guided) nowait
+        for (int y = 0; y < size.y; ++y)
+        {
+            const vigra::Diff2D begin(0, y);
+            const vigra::Diff2D end(size.x, y + 1);
+
+            vigra::transformImage(src_upperleft + begin, src_upperleft + end, src_acc,
+                                  dest_upperleft + begin, dest_acc,
+                                  f);
+        }
     } // omp parallel
 }
 
@@ -176,24 +176,24 @@ inline void
 transformImageIfMP(SrcImageIterator src_upperleft, SrcImageIterator src_lowerright, SrcAccessor src_acc,
                    MaskImageIterator mask_upperleft, MaskAccessor mask_acc,
                    DestImageIterator dest_upperleft, DestAccessor dest_acc,
-                   const Functor& func)
+                   const Functor& functor)
 {
-    typedef typename DestAccessor::value_type value_type;
-    typedef typename vigra::NumericTraits<value_type>::isScalar isScalar;
-
-    const vigra::Diff2D size(src_lowerright - src_upperleft);
-
 #pragma omp parallel
     {
-        const int n = omp_get_num_threads();
-        const int i = omp_get_thread_num();
-        const vigra::Diff2D begin(0, (i * size.y) / n);
-        const vigra::Diff2D end(size.x, ((i + 1) * size.y) / n);
+        const vigra::Size2D size(src_lowerright - src_upperleft);
+        Functor f(functor);
 
-        vigra::transformImageIf(src_upperleft + begin, src_upperleft + end, src_acc,
-                                mask_upperleft + begin, mask_acc,
-                                dest_upperleft + begin, dest_acc,
-                                func);
+#pragma omp for schedule(guided) nowait
+        for (int y = 0; y < size.y; ++y)
+        {
+            const vigra::Diff2D begin(0, y);
+            const vigra::Diff2D end(size.x, y + 1);
+
+            vigra::transformImageIf(src_upperleft + begin, src_upperleft + end, src_acc,
+                                    mask_upperleft + begin, mask_acc,
+                                    dest_upperleft + begin, dest_acc,
+                                    f);
+        }
     } // omp parallel
 }
 
@@ -583,12 +583,12 @@ inline void
 combineTwoImagesMP(vigra::triple<SrcImageIterator1, SrcImageIterator1, SrcAccessor1> src1,
                    vigra::pair<SrcImageIterator2, SrcAccessor2> src2,
                    vigra::pair<DestImageIterator, DestAccessor> dest,
-                   const Functor& func)
+                   const Functor& functor)
 {
     combineTwoImagesMP(src1.first, src1.second, src1.third,
                        src2.first, src2.second,
                        dest.first, dest.second,
-                       func);
+                       functor);
 }
 
 
@@ -602,13 +602,13 @@ combineTwoImagesIfMP(vigra::triple<SrcImageIterator1, SrcImageIterator1, SrcAcce
                      vigra::pair<SrcImageIterator2, SrcAccessor2> src2,
                      vigra::pair<MaskImageIterator, MaskAccessor> mask,
                      vigra::pair<DestImageIterator, DestAccessor> dest,
-                     const Functor& func)
+                     const Functor& functor)
 {
     combineTwoImagesIfMP(src1.first, src1.second, src1.third,
                          src2.first, src2.second,
                          mask.first, mask.second,
                          dest.first, dest.second,
-                         func);
+                         functor);
 }
 
 
@@ -622,13 +622,13 @@ combineThreeImagesMP(vigra::triple<SrcImageIterator1, SrcImageIterator1, SrcAcce
                      vigra::pair<SrcImageIterator2, SrcAccessor2> src2,
                      vigra::pair<SrcImageIterator3, SrcAccessor3> src3,
                      vigra::pair<DestImageIterator, DestAccessor> dest,
-                     const Functor& func)
+                     const Functor& functor)
 {
     combineThreeImagesMP(src1.first, src1.second, src1.third,
                          src2.first, src2.second,
                          src3.first, src3.second,
                          dest.first, dest.second,
-                         func);
+                         functor);
 }
 
 
@@ -638,11 +638,11 @@ template <class SrcImageIterator, class SrcAccessor,
 inline void
 transformImageMP(vigra::triple<SrcImageIterator, SrcImageIterator, SrcAccessor> src,
                  vigra::pair<DestImageIterator, DestAccessor> dest,
-                 const Functor& func)
+                 const Functor& functor)
 {
     transformImageMP(src.first, src.second, src.third,
                      dest.first, dest.second,
-                     func);
+                     functor);
 }
 
 
@@ -654,12 +654,12 @@ inline void
 transformImageIfMP(vigra::triple<SrcImageIterator, SrcImageIterator, SrcAccessor> src,
                    vigra::pair<MaskImageIterator, MaskAccessor> mask,
                    vigra::pair<DestImageIterator, DestAccessor> dest,
-                   const Functor& func)
+                   const Functor& functor)
 {
     transformImageIfMP(src.first, src.second, src.third,
                        mask.first, mask.second,
                        dest.first, dest.second,
-                       func);
+                       functor);
 }
 
 
